--- a/public/client_home.html
+++ b/public/client_home.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>الصفحة الرئيسية للعميل</title>
   <meta charset="UTF-8" />
 </head>
+
 <body>
+  <h1>Navigation</h1>
+  <ul>
+    <li><a href="404.html">404 Page</a></li>
+    <li><a href="client_home.html">Client Home</a></li>
+    <li><a href="client_post_job.html">Client Post Job</a></li>
+    <li><a href="client_view_offers.html">Client View Offers</a></li>
+    <li><a href="courier_home.html">Courier Home</a></li>
+    <li><a href="courier_view_jobs.html">Courier View Jobs</a></li>
+    <li><a href="index.html">Index</a></li>
+    <li><a href="signin.html">Sign In</a></li>
+    <li><a href="signup.html">Sign Up</a></li>
+  </ul>
   <h2>مرحبًا بك عميلنا العزيز</h2>
   <p>يمكنك الآن نشر طلبات جديدة واستقبال عروض من المناديب.</p>
 
@@ -16,5 +30,8 @@
       window.location.href = "signin.html";
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
+
 </html>
