--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </head>
 
 <body>
@@ -31,15 +33,18 @@
         const jobsList = document.getElementById("jobsList");
 
         function loadJobs() {
+            console.log("loadJobs");
             db.ref("jobs").orderByChild("status").equalTo("open").once("value", snapshot => {
                 jobsList.innerHTML = "";
                 if (!snapshot.exists()) {
+                    console.log("------------------");
                     jobsList.innerHTML = "<p>لا توجد طلبات حاليًا.</p>";
                     return;
                 }
 
                 snapshot.forEach(jobSnap => {
                     const job = jobSnap.val();
+                    console.log(jobSnap);
                     const jobId = jobSnap.key;
 
                     const jobDiv = document.createElement("div");
@@ -47,14 +52,9 @@
                     jobDiv.style.padding = "10px";
                     jobDiv.style.margin = "10px";
 
-                    jobDiv.innerHTML = `
-                                                                                                                                                                                                                              <h3>${job.title}</h3>
-                                                                                                                                                                                                                                          <p>${job.details}</p>
-                                                                                                                                                                                                                                                      <p><strong>الميزانية:</strong> ${job.budget} جنيه</p>
-                                                                                                                                                                                                                                                                  <button onclick="applyOffer('${jobId}')">تقديم عرض</button>
-                                                                                                                                                                                                                                                                            `;
-
+                    jobDiv.innerHTML = "****";
                     jobsList.appendChild(jobDiv);
+                    console.log("############" + job);
                 });
             });
         }
@@ -77,6 +77,19 @@
 
         loadJobs();
     </script>
+    <h1>Navigation</h1>
+    <ul>
+        <li><a href="404.html">404 Page</a></li>
+        <li><a href="client_home.html">Client Home</a></li>
+        <li><a href="client_post_job.html">Client Post Job</a></li>
+        <li><a href="client_view_offers.html">Client View Offers</a></li>
+        <li><a href="courier_home.html">Courier Home</a></li>
+        <li><a href="courier_view_jobs.html">Courier View Jobs</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="signin.html">Sign In</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+    
 </body>
 
 </html>
