--- a/public/signin.html
+++ b/public/signin.html
@@ -63,5 +63,19 @@
       });
     }
   </script>
+    <h1>Navigation</h1>
+    <ul>
+      <li><a href="404.html">404 Page</a></li>
+      <li><a href="client_home.html">Client Home</a></li>
+      <li><a href="client_post_job.html">Client Post Job</a></li>
+      <li><a href="client_view_offers.html">Client View Offers</a></li>
+      <li><a href="courier_home.html">Courier Home</a></li>
+      <li><a href="courier_view_jobs.html">Courier View Jobs</a></li>
+      <li><a href="index.html">Index</a></li>
+      <li><a href="signin.html">Sign In</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </body>
 </html>
