--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -2,94 +2,16 @@
 <html>
 
 <head>
-    <title>الطلبات المتاحة</title>
+    <title>عرض الوظائف للمندوب</title>
     <meta charset="UTF-8" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init();</script>
+    <script type="module" src="../js/controllers/courier_view_jobs_controller.js"></script>
 </head>
 
 <body>
-    <h2>الطلبات المتاحة</h2>
-    <div id="jobsList">جاري التحميل...</div>
-
-    <button onclick="logout()">تسجيل الخروج</button>
-
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyBXyTzYT_kjwcibZo3zXQrhOdPyUksodig",
-            authDomain: "wassally25.firebaseapp.com",
-            databaseURL: "https://wassally25-default-rtdb.firebaseio.com",
-            projectId: "wassally25",
-            storageBucket: "wassally25.firebasestorage.app",
-            messagingSenderId: "673929758317",
-            appId: "1:673929758317:web:de4fe369507fb58d492164"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        const jobsList = document.getElementById("jobsList");
-
-        function loadJobs() {
-            console.log("loadJobs");
-            db.ref("jobs").orderByChild("status").equalTo("open").once("value", snapshot => {
-                jobsList.innerHTML = "";
-                if (!snapshot.exists()) {
-                    console.log("------------------");
-                    jobsList.innerHTML = "<p>لا توجد طلبات حاليًا.</p>";
-                    return;
-                }
-
-                snapshot.forEach(jobSnap => {
-                    const job = jobSnap.val();
-                    console.log(jobSnap);
-                    const jobId = jobSnap.key;
-
-                    const jobDiv = document.createElement("div");
-                    jobDiv.style.border = "1px solid #aaa";
-                    jobDiv.style.padding = "10px";
-                    jobDiv.style.margin = "10px";
-
-                    jobDiv.innerHTML = "****";
-                    jobsList.appendChild(jobDiv);
-                    console.log("############" + job);
-                });
-            });
-        }
-
-        function applyOffer(jobId) {
-            const courierId = localStorage.getItem("userId");
-            const offerRef = db.ref(`offers/${jobId}`).push();
-            offerRef.set({
-                courierId,
-                offeredAt: new Date().toISOString(),
-                status: "pending"
-            });
-            alert("تم إرسال العرض بنجاح!");
-        }
-
-        function logout() {
-            localStorage.clear();
-            window.location.href = "signin.html";
-        }
-
-        loadJobs();
-    </script>
-    <h1>Navigation</h1>
-    <ul>
-        <li><a href="404.html">404 Page</a></li>
-        <li><a href="client_home.html">Client Home</a></li>
-        <li><a href="client_post_job.html">Client Post Job</a></li>
-        <li><a href="client_view_offers.html">Client View Offers</a></li>
-        <li><a href="courier_home.html">Courier Home</a></li>
-        <li><a href="courier_view_jobs.html">Courier View Jobs</a></li>
-        <li><a href="index.html">Index</a></li>
-        <li><a href="signin.html">Sign In</a></li>
-        <li><a href="signup.html">Sign Up</a></li>
-    </ul>
-    
+    <h2>عرض الوظائف المتاحة للمندوبين</h2>
+    <div id="jobs_list"></div>
 </body>
 
 </html>
