--- a/public/signin.html
+++ b/public/signin.html
@@ -1,81 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول</title>
-  <meta charset="UTF-8" />
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script type="module" src="js/controller.js"></script>
 </head>
 <body>
-  <h2>تسجيل الدخول</h2>
-
-  <form onsubmit="signin(event)">
+  <form id="signin-form" onsubmit="signin(event)">
     <input type="email" id="email" placeholder="البريد الإلكتروني" required><br>
     <input type="password" id="password" placeholder="كلمة المرور" required><br>
     <button type="submit">دخول</button>
   </form>
-
-  <p>ما عندكش حساب؟ <a href="signup.html">سجل من هنا</a></p>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBXyTzYT_kjwcibZo3zXQrhOdPyUksodig",
-      authDomain: "wassally25.firebaseapp.com",
-      databaseURL: "https://wassally25-default-rtdb.firebaseio.com",
-      projectId: "wassally25",
-      storageBucket: "wassally25.firebasestorage.app",
-      messagingSenderId: "673929758317",
-      appId: "1:673929758317:web:de4fe369507fb58d492164",
-      measurementId: "G-W5Z57HVDCK"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    function signin(e) {
-      e.preventDefault();
-
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      db.ref("users").once("value", (snapshot) => {
-        let found = false;
-        snapshot.forEach(child => {
-          const user = child.val();
-          if (user.email === email && user.password === password) {
-            found = true;
-            alert("تم تسجيل الدخول بنجاح!");
-            // حفظ بيانات الجلسة مؤقتًا
-            localStorage.setItem("userId", child.key);
-            localStorage.setItem("userRole", user.role);
-            // توجيه حسب الدور
-            if (user.role === "client") {
-              window.location.href = "client_home.html";
-            } else {
-              window.location.href = "courier_home.html";
-            }
-          }
-        });
-
-        if (!found) {
-          alert("البريد الإلكتروني أو كلمة المرور غير صحيحة.");
-        }
-      });
-    }
-  </script>
-    <h1>Navigation</h1>
-    <ul>
-      <li><a href="404.html">404 Page</a></li>
-      <li><a href="client_home.html">Client Home</a></li>
-      <li><a href="client_post_job.html">Client Post Job</a></li>
-      <li><a href="client_view_offers.html">Client View Offers</a></li>
-      <li><a href="courier_home.html">Courier Home</a></li>
-      <li><a href="courier_view_jobs.html">Courier View Jobs</a></li>
-      <li><a href="index.html">Index</a></li>
-      <li><a href="signin.html">Sign In</a></li>
-      <li><a href="signup.html">Sign Up</a></li>
-    </ul>
-    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init();</script>
 </body>
 </html>
