--- a/dashboard.html
+++ b/dashboard.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>لوحة التحكم</title>
   <meta charset="UTF-8" />
 </head>
+
 <body>
   <h1>لوحة التحكم</h1>
   <p id="welcome"></p>
@@ -22,5 +24,8 @@
       window.location.href = "signin.html";
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
+
 </html>
