--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -13,5 +13,7 @@
     <h2>عرض الوظائف المتاحة للمندوبين</h2>
     <div id="jobs_list"></div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
 
 </html>
