--- a/public/signin.html
+++ b/public/signin.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول</title>
   <script type="module" src="js/controller.js"></script>
 </head>
+
 <body>
   <form id="signin-form" onsubmit="signin(event)">
     <input type="email" id="email" placeholder="البريد الإلكتروني" required><br>
     <input type="password" id="password" placeholder="كلمة المرور" required><br>
     <button type="submit">دخول</button>
   </form>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
+
 </html>
