--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -1,6 +1,6 @@
+<!-- courier_view_jobs.html -->
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>عرض الوظائف للمندوب</title>
     <meta charset="UTF-8" />
@@ -8,12 +8,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script type="module" src="../js/courier_view_jobs_controller.js"></script>
 </head>
-
 <body>
     <h2>عرض الوظائف المتاحة للمندوبين</h2>
     <div id="jobs_list"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
-
 </html>
