--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
 
@@ -10,7 +11,6 @@
 <body>
   <h1>Firebase Test</h1>
   <button onclick="writeData()">Send Data</button>
-
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyBXyTzYT_kjwcibZo3zXQrhOdPyUksodig",
@@ -22,10 +22,8 @@
       appId: "1:673929758317:web:de4fe369507fb58d492164",
       measurementId: "G-W5Z57HVDCK"
     };
-
     firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
-
     function writeData() {
       console.log("Button clicked");
       database.ref('test').set({
@@ -37,7 +35,6 @@
       });
     }
   </script>
-
   <!-- Eruda console (for mobile) -->
   <h1>Navigation</h1>
   <ul>
