--- a/public/courier_home.html
+++ b/public/courier_home.html
@@ -4,6 +4,13 @@
 <head>
   <title>الصفحة الرئيسية للمندوب</title>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
+
 </head>
 <body>
   <h2>مرحبًا بك أيها المندوب</h2>
