add cache busting

--- a/public/client_home.html
+++ b/public/client_home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css?v=1745824620324">
 
   <title>صفحة العميل</title>
 </head>
@@ -20,6 +20,6 @@
 
   <a href="signin.html">تسجيل الخروج</a>
 
-  <script type="module" src="./js/client_home_controller.js"></script>
+  <script type="module" src="./js/client_home_controller.js?v=1745824620324"></script>
 </body>
 </html>
