--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -6,11 +6,11 @@
     <title>نشر طلب جديد</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css?v=1745824620328">
   
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745824620328"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745824620328"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745824620328"></script>
     </head>
 
 <body>
