--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css?v=1745824620340">
 
   <title>صفحة المندوب</title>
 </head>
@@ -16,11 +16,11 @@
   </div>
 
   <a href="signin.html">تسجيل الخروج</a>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745824620340"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745824620340"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745824620340"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
-  <script type="module" src="./js/courier_view_jobs_controller.js"></script>
+  <script type="module" src="./js/courier_view_jobs_controller.js?v=1745824620340"></script>
 </body>
 </html>
