--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css?v=1745824620355">
 
   <title>إنشاء حساب</title>
 </head>
@@ -23,11 +23,11 @@
   </form>
 
   <p>لديك حساب بالفعل؟ <a href="signin.html">تسجيل الدخول</a></p>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745824620355"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745824620355"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745824620355"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
-  <script type="module" src="./js/signup_controller.js"></script>
+  <script type="module" src="./js/signup_controller.js?v=1745824620355"></script>
 </body>
 </html>
