--- a/public/client_home.html
+++ b/public/client_home.html
@@ -6,15 +6,15 @@
   <title>الصفحة الرئيسية للعميل</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1745825603110">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <h1>مرحبًا بك في الصفحة الرئيسية</h1>
   <p>اختر الإجراء الذي ترغب في القيام به:</p>
 
   <div class="actions">
-    <a href="client_post_job.html" class="action-link">نشر طلب جديد</a>
-    <a href="client_view_offers.html" class="action-link">مراجعة العروض</a>
+    <a href="client_post_job.html" class="action_link">نشر طلب جديد</a>
+    <a href="client_view_offers.html" class="action_link">مراجعة العروض</a>
   </div>
 
   <button onclick="logout()">تسجيل الخروج</button>
