refined cache buster

--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -6,11 +6,11 @@
     <title>نشر طلب جديد</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css?v=1745824620328">
+    <link rel="stylesheet" href="styles/styles.css?v=1745831940240?v=1745824620328">
   
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745824620328"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745824620328"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745824620328"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745831940240?v=1745824620328"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745831940240?v=1745824620328"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745831940240?v=1745824620328"></script>
     </head>
 
 <body>
@@ -29,7 +29,7 @@
             window.location.href = "signin.html";
         }
     </script>
-    <script type="module" src="./js/client_post_job_controller.js?v=3"></script>
+    <script type="module" src="./js/client_post_job_controller.js?v=1745831940240?v=3"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
