--- a/public/courier_home.html
+++ b/public/courier_home.html
@@ -5,11 +5,11 @@
   <title>الصفحة الرئيسية للمندوب</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1745824620336">
+  <link rel="stylesheet" href="styles/styles.css?v=1745831940247?v=1745824620336">
 
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1745824620336"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1745824620336"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js?v=1745824620336"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1745831940247?v=1745824620336"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1745831940247?v=1745824620336"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js?v=1745831940247?v=1745824620336"></script>
 
 </head>
 <body>
