add console script for all html

--- a/public/index.html
+++ b/public/index.html
@@ -74,5 +74,7 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
