--- a/public/signup.html
+++ b/public/signup.html
@@ -29,5 +29,7 @@
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
   <script type="module" src="./js/signup_controller.js?v=1745831940263?v=1745824620355"></script>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
