--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -22,5 +22,7 @@
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
   <script type="module" src="./js/courier_view_jobs_controller.js?v=1745831940251?v=1745824620340"></script>
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
