--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1745831940251?v=1745824620340">
-
+  <script src="js/indexeddb_logs.js" defer></script>
+  
   <title>صفحة المندوب</title>
 </head>
 <body>
