--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Empower delivery drivers with the best tools – compare offers, secure payments, and more.">
   <!-- Link to external CSS (create styles.css in your project folder) -->
   <link rel="stylesheet" href="./styles/styles.css">
-  <!-- Link to your JavaScript file (create app.js in your project folder) -->
-  <!-- <script src="app.js" defer></script> -->
+  <script src="js/indexeddb_logs.js" defer></script>
 </head>
 <body>
   <!-- Header Section -->
