--- a/public/signin.html
+++ b/public/signin.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1745831940259">
+  <script src="js/indexeddb_logs.js" defer></script>
   <title>تسجيل الدخول</title>
 </head>
 <body>
