--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -11,7 +11,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745831940240?v=1745824620328"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745831940240?v=1745824620328"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745831940240?v=1745824620328"></script>
-    </head>
+    <script src="js/indexeddb_logs.js" defer></script>
+</head>
 
 <body>
     <h2>نشر طلب جديد</h2>
