--- a/public/client_view_offers.html
+++ b/public/client_view_offers.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1745831940244?v=1745824620332"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1745831940244?v=1745824620332"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js?v=1745831940244?v=1745824620332"></script>
+    <script src="js/indexeddb_logs.js" defer></script>
 </head>
 
 <body>
