--- a/public/signup.html
+++ b/public/signup.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1745831940263?v=1745824620355">
-
+  <script src="js/indexeddb_logs.js" defer></script>
+  
   <title>إنشاء حساب</title>
 </head>
 <body>
