--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -11,7 +11,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1745831940240?v=1745824620328"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1745831940240?v=1745824620328"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1745831940240?v=1745824620328"></script>
-    <script src="js/indexeddb_logs.js" defer></script>
 </head>
 
 <body>
@@ -30,7 +29,7 @@
             window.location.href = "signin.html";
         }
     </script>
-    <script type="module" src="./js/client_post_job_controller.js?v=1745831940240?v=3"></script>
+    <script type="module" src="./js/client_post_job_controller.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
