--- a/public/client_view_offers.html
+++ b/public/client_view_offers.html
@@ -5,11 +5,11 @@
     <title>مراجعة العروض</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css?v=1745831940244?v=1745824620332">
+    <link rel="stylesheet" href="styles/styles.css">
 
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1745831940244?v=1745824620332"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1745831940244?v=1745824620332"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js?v=1745831940244?v=1745824620332"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js"></script>
     <script src="js/indexeddb_logs.js" defer></script>
 </head>
 
@@ -30,7 +30,7 @@
         <li><a href="signup.html">Sign Up</a></li>
     </ul>
 
-    <script type="module" src="./js/client_view_offers_controller.js?v=1745831940244?v=1745824620332"></script>
+    <script type="module" src="./js/client_view_offers_controller.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
