--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Delivery App</title>
   <meta name="description" content="Empower delivery drivers with the best tools – compare offers, secure payments, and more.">
   <!-- Link to external CSS (create styles.css in your project folder) -->
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css?v=1746189093888">
 
 </head>
 <body>
