- Correct timestamps in all includes - Trigger Github Actions on pushes to all branches

--- a/public/courier_home.html
+++ b/public/courier_home.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1746189093882">
 
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1746189093882?v=1745831940247"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1746189093882?v=1745831940247"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js?v=1746189093882?v=1745831940247"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1746278706"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1746278706"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js?v=1746278706"></script>
 
 </head>
 <body>
