fix sign-form id typo

--- a/public/signin.html
+++ b/public/signin.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746278706">
+  <link rel="stylesheet" href="styles/styles.css?v=1746289120">
   <title>تسجيل الدخول</title>
 </head>
 <body>
   <h1>تسجيل الدخول</h1>
 
-  <form id="signin-form">
+  <form id="signin_form">
     <input type="email" id="email" placeholder="البريد الإلكتروني" required><br>
     <input type="password" id="password" placeholder="كلمة المرور" required><br>
     <button type="submit">دخول</button>
   </form>
 
   <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746278706"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746278706"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746278706"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746289120"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746289120"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746289120"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
-  <script type="module" src="./js/signin_controller.js?v=1746278706"></script>
+  <script type="module" src="./js/signin_controller.js?v=1746289120"></script>
 </body>
 </html>
