--- a/public/signup.html
+++ b/public/signup.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746278706">
+  <link rel="stylesheet" href="styles/styles.css?v=1746289120">
   
   <title>إنشاء حساب</title>
 </head>
 <body>
   <h1>إنشاء حساب جديد</h1>
 
-  <form id="signup-form">
+  <form id="signup_form">
     <input type="text" id="username" placeholder="اسم المستخدم" required><br>
     <input type="email" id="email" placeholder="البريد الإلكتروني" required><br>
     <input type="password" id="password" placeholder="كلمة المرور" required><br>
@@ -23,10 +23,10 @@
   </form>
 
   <p>لديك حساب بالفعل؟ <a href="signin.html">تسجيل الدخول</a></p>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746278706"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746278706"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746278706"></script>
-  <script type="module" src="./js/signup_controller.js?v=1746278706"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746289120"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746289120"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746289120"></script>
+  <script type="module" src="./js/signup_controller.js?v=1746289120"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
 </body>
