correct post_job function call

--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -15,7 +15,7 @@
 
 <body>
     <h2>نشر طلب جديد</h2>
-    <form id="post-job-form">
+    <form id="post_job_form">
         <input type="text" id="title" placeholder="عنوان الطلب" required><br><br>
         <textarea id="details" placeholder="وصف الطلب" required></textarea><br><br>
         <input type="number" id="budget" placeholder="الميزانية بالجنيه" required><br><br>
