client post job

--- a/public/client_view_offers.html
+++ b/public/client_view_offers.html
@@ -15,7 +15,7 @@
 
 <body>
     <h2>العروض المقدمة على طلباتك</h2>
-    <div id="offersContainer">جاري التحميل...</div>
+    <div id="offers_container">جاري التحميل...</div>
 
     <h1>Navigation</h1>
     <ul>
