Add send offer modal for courier

--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1746387491">
-  
+  <link rel="stylesheet" href="styles/send_offer_modal.css?v=1746387491">
+
   <title>صفحة المندوب</title>
 </head>
 <body>
