auto inject timestamp in all html pages

--- a/public/client_home.html
+++ b/public/client_home.html
@@ -6,7 +6,8 @@
   <title>الصفحة الرئيسية للعميل</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746531033">
+  <link rel="stylesheet" href="styles/styles.css?v=1746534078">
+  <script src="js/utils.js?v=1746534078" ></script>
 </head>
 <body>
   <h1>مرحبًا بك في الصفحة الرئيسية</h1>
