--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746531033">
-  <link rel="stylesheet" href="styles/send_offer_modal.css?v=1746531033">
-
+  <link rel="stylesheet" href="styles/styles.css?v=1746534078">
+  <link rel="stylesheet" href="styles/send_offer_modal.css?v=1746534078">
+  <script src="js/utils.js?v=1746534078" defer></script>
+  
   <title>صفحة المندوب</title>
 </head>
 <body>
@@ -17,12 +18,12 @@
   </div>
 
   <a href="signin.html">تسجيل الخروج</a>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746531033"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746531033"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746531033"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746534078"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746534078"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746534078"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
-  <script type="module" src="./js/courier_view_jobs_controller.js?v=1746531033"></script>
+  <script type="module" src="./js/courier_view_jobs_controller.js?v=1746534078"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
 </body>
