--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <title>Delivery App</title>
   <meta name="description" content="Empower delivery drivers with the best tools – compare offers, secure payments, and more.">
   <!-- Link to external CSS (create styles.css in your project folder) -->
-  <link rel="stylesheet" href="./styles/styles.css?v=1746531033">
-
+  <link rel="stylesheet" href="./styles/styles.css?v=1746534078">
+  <script src="js/utils.js?v=1746534078" defer></script>
+  
 </head>
 <body>
   <!-- Header Section -->
