--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css?v=1746531033">
+  <link rel="stylesheet" href="styles/styles.css?v=1746534078">
+  <script src="js/utils.js?v=1746534078" defer></script>
   
   <title>إنشاء حساب</title>
 </head>
@@ -23,10 +24,10 @@
   </form>
 
   <p>لديك حساب بالفعل؟ <a href="signin.html">تسجيل الدخول</a></p>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746531033"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746531033"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746531033"></script>
-  <script type="module" src="./js/signup_controller.js?v=1746531033"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746534078"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746534078"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746534078"></script>
+  <script type="module" src="./js/signup_controller.js?v=1746534078"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
 </body>
