fix module include

--- a/public/courier_view_jobs.html
+++ b/public/courier_view_jobs.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1746544643">
   <link rel="stylesheet" href="styles/send_offer_modal.css?v=1746544643">
-  <script src="js/utils.js?v=1746544643" defer></script>
+  <script type="module" src="js/utils.js?v=1746544643" defer></script>
   
   <title>صفحة المندوب</title>
 </head>
