--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746544643"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746544643"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746544643"></script>
-    <script src="js/utils.js?v=1746544643" ></script>
+    <script type="module" src="js/utils.js?v=1746544643" ></script>
 </head>
 
 <body>
