--- a/public/client_view_offers.html
+++ b/public/client_view_offers.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1746544643"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js?v=1746544643"></script>
     <script src="js/indexeddb_logs.js?v=1746189093880" defer></script>
-    <script src="js/utils.js?v=1746544643" defer></script>
+    <script type="module" src="js/utils.js?v=1746544643" defer></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <li><a href="signup.html">Sign Up</a></li>
     </ul>
 
-    <script type="module" src="./js/client_view_offers_controller.js?v=1746544643"></script>
+    <script type="module" src="js/client_view_offers_controller.js?v=1746544643"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
