--- a/public/courier_home.html
+++ b/public/courier_home.html
@@ -10,7 +10,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js?v=1746544643"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js?v=1746544643"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js?v=1746544643"></script>
-  <script src="js/utils.js?v=1746544643" defer></script>
+  <script type="module" src="js/utils.js?v=1746544643" defer></script>
 </head>
 <body>
   <h2>مرحبًا بك أيها المندوب</h2>
