--- a/public/signin.html
+++ b/public/signin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/styles.css?v=1746544643">
-  <script src="js/utils.js?v=1746544643" defer></script>
+  <script type="module" src="js/utils.js?v=1746544643" defer></script>
   <title>تسجيل الدخول</title>
 </head>
 <body>
