defer script after dom loading

--- a/public/client_post_job.html
+++ b/public/client_post_job.html
@@ -30,7 +30,7 @@
             window.location.href = "signin.html";
         }
     </script>
-    <script type="module" src="./js/client_post_job_controller.js?v=1746547227"></script>
+    <script type="module" src="./js/client_post_job_controller.js?v=1746547227" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
