--- a/public/client_view_offers.html
+++ b/public/client_view_offers.html
@@ -30,7 +30,7 @@
         <li><a href="signup.html">Sign Up</a></li>
     </ul>
 
-    <script type="module" src="js/client_view_offers_controller.js?v=1746547227"></script>
+    <script type="module" src="js/client_view_offers_controller.js?v=1746547227" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>eruda.init();</script>
 </body>
