--- a/public/signin.html
+++ b/public/signin.html
@@ -23,6 +23,6 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746547227"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
-  <script type="module" src="./js/signin_controller.js?v=1746547227"></script>
+  <script type="module" src="./js/signin_controller.js?v=1746547227" defer></script>
 </body>
 </html>
