--- a/public/signup.html
+++ b/public/signup.html
@@ -27,7 +27,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js?v=1746547227"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js?v=1746547227"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js?v=1746547227"></script>
-  <script type="module" src="./js/signup_controller.js?v=1746547227"></script>
+  <script type="module" src="./js/signup_controller.js?v=1746547227" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init();</script>
 </body>
